Update project environment

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+renv/
 
 # pkgdown site
 docs/
@@ -47,3 +48,6 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# Mac files
+.DS_Store
